--- a/theme.yaml
+++ b/theme.yaml
@@ -1,7 +1,7 @@
 apiVersion: theme.halo.run/v1alpha1
 kind: Theme
 metadata:
-  name: theme-earth
+  name: earth
   annotations:
     # Add supports for Halo App Store
     # https://halo.run/store/apps/app-KgWqR
@@ -9,9 +9,9 @@ metadata:
 spec:
   displayName: Earth
   author:
-    name: Halo
-    website: https://www.halo.run
-  description: Default theme for Halo 2.0
+    name: notpeppa
+    website: https://blog.notpeppa.online
+  description: 基于Halo 2.0 的默认主题修改
   logo: https://www.halo.run/logo
   homepage: https://www.halo.run/store/apps/app-KgWqR
   repo: https://github.com/halo-dev/theme-earth
